@@ -16,6 +16,8 @@ REMAIN = 'remain'  #保留
 FENXIAO_TYPE = 'fenxiao'
 TAOBAO_TYPE  = 'fixed'
 DIRECT_TYPE  = 'direct'
+AGENT_TYPE   = 'AGENT'
+DEALER_TYPE   = 'DEALER'
 EXCHANGE_TYPE  = 'exchange'
 REISSUE_TYPE   = 'reissue'
 AUTO_DELIVERY_TYPE = 'auto_delivery'
@@ -23,7 +25,12 @@ COD_TYPE        = 'cod'
 GUARANTEE_TYPE  = 'guarantee_trade'
 AUCTION_TYPE    = 'auction'
 
-TAOBAO_TRADE_TYPE = (FENXIAO_TYPE,TAOBAO_TYPE,AUTO_DELIVERY_TYPE,COD_TYPE,GUARANTEE_TYPE,AUCTION_TYPE)
+TAOBAO_TRADE_TYPE = (FENXIAO_TYPE,
+                     TAOBAO_TYPE,
+                     AUTO_DELIVERY_TYPE,
+                     COD_TYPE,
+                     GUARANTEE_TYPE,
+                     AUCTION_TYPE)
 #商品状态
 ONSALE_STATUS  = 'onsale'
 INSTOCK_STATUS = 'instock'
@@ -84,16 +91,30 @@ IN_EFFECT = "IN_EFFECT"
 #INVALID_STATUS = 'INVALID' 
 
 #扫描验货称重状态
-WAIT_SCAN_CHECK_WEIGHT = (WAIT_CHECK_BARCODE_STATUS,WAIT_SCAN_WEIGHT_STATUS)
+WAIT_SCAN_CHECK_WEIGHT = (WAIT_CHECK_BARCODE_STATUS,
+                          WAIT_SCAN_WEIGHT_STATUS)
 #淘宝等待卖家发货对应系统内部状态
-WAIT_DELIVERY_STATUS = [WAIT_AUDIT_STATUS,WAIT_PREPARE_SEND_STATUS,REGULAR_REMAIN_STATUS,ON_THE_FLY_STATUS]
+WAIT_DELIVERY_STATUS = [WAIT_AUDIT_STATUS,
+                        WAIT_PREPARE_SEND_STATUS,
+                        REGULAR_REMAIN_STATUS,
+                        ON_THE_FLY_STATUS]
 #淘宝等待卖家发货对应系统内部状态
-WAIT_WEIGHT_STATUS = [WAIT_AUDIT_STATUS,WAIT_PREPARE_SEND_STATUS,REGULAR_REMAIN_STATUS,
-                      ON_THE_FLY_STATUS,WAIT_CHECK_BARCODE_STATUS,WAIT_SCAN_WEIGHT_STATUS]
+WAIT_WEIGHT_STATUS = [WAIT_AUDIT_STATUS,
+                      WAIT_PREPARE_SEND_STATUS,
+                      REGULAR_REMAIN_STATUS,
+                      ON_THE_FLY_STATUS,
+                      WAIT_CHECK_BARCODE_STATUS,
+                      WAIT_SCAN_WEIGHT_STATUS]
 #淘宝卖家已发货后对应系统内部状态
-HAS_DELIVERY_STATUS = [WAIT_CHECK_BARCODE_STATUS,WAIT_SCAN_WEIGHT_STATUS,FINISHED_STATUS,INVALID_STATUS]
+HAS_DELIVERY_STATUS = [WAIT_CHECK_BARCODE_STATUS,
+                       WAIT_SCAN_WEIGHT_STATUS,
+                       FINISHED_STATUS,
+                       INVALID_STATUS]
 
-CANCEL_YUNDASID_STATUS = (WAIT_AUDIT_STATUS,INVALID_STATUS,REGULAR_REMAIN_STATUS,ON_THE_FLY_STATUS)
+CANCEL_YUNDASID_STATUS = (WAIT_AUDIT_STATUS,
+                          INVALID_STATUS,
+                          REGULAR_REMAIN_STATUS,
+                          ON_THE_FLY_STATUS)
 
 #淘宝交易状态
 TRADE_NO_CREATE_PAY = 'TRADE_NO_CREATE_PAY'
@@ -106,13 +127,21 @@ TRADE_CLOSED       = 'TRADE_CLOSED'
 TRADE_CLOSED_BY_TAOBAO   = 'TRADE_CLOSED_BY_TAOBAO'
 
 #交易有效的订单状态
-ORDER_SUCCESS_STATUS  = (WAIT_SELLER_SEND_GOODS,WAIT_BUYER_CONFIRM_GOODS,TRADE_BUYER_SIGNED,TRADE_FINISHED)
+ORDER_SUCCESS_STATUS  = (WAIT_SELLER_SEND_GOODS,
+                         WAIT_BUYER_CONFIRM_GOODS,
+                         TRADE_BUYER_SIGNED,
+                         TRADE_FINISHED)
 #买家付款后还没结束的订单
-ORDER_UNFINISH_STATUS = (WAIT_SELLER_SEND_GOODS,WAIT_BUYER_CONFIRM_GOODS,TRADE_BUYER_SIGNED)
+ORDER_UNFINISH_STATUS = (WAIT_SELLER_SEND_GOODS,
+                         WAIT_BUYER_CONFIRM_GOODS,
+                         TRADE_BUYER_SIGNED)
 #卖家已发货但未结束的订单
-ORDER_POST_STATUS     = (WAIT_BUYER_CONFIRM_GOODS,TRADE_BUYER_SIGNED,TRADE_FINISHED)
+ORDER_POST_STATUS     = (WAIT_BUYER_CONFIRM_GOODS,
+                         TRADE_BUYER_SIGNED,
+                         TRADE_FINISHED)
 #交易结束的订单
-ORDER_OK_STATUS       = (TRADE_FINISHED,TRADE_CLOSED)
+ORDER_OK_STATUS       = (TRADE_FINISHED,
+                         TRADE_CLOSED)
 #交易成功
 ORDER_FINISH_STATUS   = TRADE_FINISHED
 #交易失败
@@ -169,7 +198,9 @@ REFUND_CLOSED   = 'CLOSED'
 REFUND_SUCCESS  = 'SUCCESS'
 
 #有效的退款状态
-REFUND_APPROVAL_STATUS = [REFUND_WAIT_RETURN_GOODS,REFUND_CONFIRM_GOODS,REFUND_SUCCESS]
+REFUND_APPROVAL_STATUS = [REFUND_WAIT_RETURN_GOODS,
+                          REFUND_CONFIRM_GOODS,
+                          REFUND_SUCCESS]
 
 FRONT_NOPAID_FINAL_NOPAID = "FRONT_NOPAID_FINAL_NOPAID"
 FRONT_PAID_FINAL_NOPAID   = "FRONT_PAID_FINAL_NOPAID"
